--- a/src/Styles/AppStyle/App.scss
+++ b/src/Styles/AppStyle/App.scss
@@ -25,6 +25,9 @@ svg {
 .tox-notification {
     display: none !important;
 }
+.tox-notification tox-notification--in tox-notification--warning{
+    display: none !important;
+}
 
 
 
