--- a/src/Styles/Layout/SideBar.scss
+++ b/src/Styles/Layout/SideBar.scss
@@ -250,8 +250,8 @@ overflow-x: hidden;
 
 @media screen and (max-width: 700px) {
     .SideBar{
-        top: 0;
-        right: 0;
+        // top: 0;
+        // right: 0;
     }
     .out_Sidebar{
 .SideBar_Open,.noOpen{
