--- a/src/Styles/AppStyle/Import.scss
+++ b/src/Styles/AppStyle/Import.scss
@@ -14,7 +14,7 @@
 @import '../component/SingleDriverInfo.scss';
 @import '../component/DriverInfoSocket.scss';
 @import '../component/radio.scss';
-
+@import '../component/categoryFrom.scss';
 
 
 
